Refactor SQL migration scripts for improved readability and performance
- Updated V6__05_CREATE_INDEXES.sql to format ANALYZE statements for better clarity.
- Enhanced V7__06_CREATE_TRIGGERS_AND_FUNCTIONS.sql by improving formatting and readability of trigger creation logic.
- Modified V8__07_INSERT_SAMPLE_DATA.sql to streamline INSERT statements and improve formatting.
- Updated V9__09_UPDATE_USER_PASSWORDS.sql for consistent formatting of user password updates.
- Cleaned up AlbelApiApplicationTests.java and OptimizationEngineTest.java for consistent indentation and formatting.
- Refactored OptimizationServiceTest.java for improved readability and consistency in method calls and assertions.