@@ -34,7 +34,7 @@ public class OptimizationSnapshotLoader {
     @Transactional(readOnly = true)
     public OptimizationItemSnapshot loadItem(UUID itemId) {
         return commandeItemRepository.findOptimizationSnapshotById(itemId)
-            .orElseThrow(() -> new ResourceNotFoundException("Order item not found: " + itemId));
+                .orElseThrow(() -> new ResourceNotFoundException("Order item not found: " + itemId));
     }
 
     @Transactional(readOnly = true)
@@ -45,46 +45,46 @@ public class OptimizationSnapshotLoader {
     @Transactional(readOnly = true)
     public OptimizationPlanningContext loadPlanningContext(OptimizationItemSnapshot itemSnapshot) {
         OptimizationCandidateFilter filter = new OptimizationCandidateFilter(
-            itemSnapshot.articleId(),
-            itemSnapshot.colorId(),
-            itemSnapshot.altierId()
+                itemSnapshot.articleId(),
+                itemSnapshot.colorId(),
+                itemSnapshot.altierId()
         );
 
         if (filter.articleId() == null) {
             return new OptimizationPlanningContext(
-                itemSnapshot,
-                List.of(),
-                Collections.emptyMap(),
-                digest(java.util.Arrays.asList(
-                    safe(itemSnapshot.itemId()),
-                    safe(itemSnapshot.commandeId()),
-                    safe(itemSnapshot.altierId()),
-                    safe(itemSnapshot.articleId()),
-                    safe(itemSnapshot.materialType()),
-                    safe(itemSnapshot.nbPlis()),
-                    safe(itemSnapshot.thicknessMm()),
-                    safe(itemSnapshot.longueurM()),
-                    safe(itemSnapshot.largeurMm()),
-                    safe(itemSnapshot.quantite()),
-                    safe(itemSnapshot.colorId()),
-                    safe(normalize(itemSnapshot.reference())),
-                    safe(itemSnapshot.itemUpdatedAt()),
-                    safe(itemSnapshot.commandeUpdatedAt())
-                )),
-                digest(List.of("ROLLS=0|null|0", "WASTES=0|null|0"))
+                    itemSnapshot,
+                    List.of(),
+                    Collections.emptyMap(),
+                    digest(java.util.Arrays.asList(
+                            safe(itemSnapshot.itemId()),
+                            safe(itemSnapshot.commandeId()),
+                            safe(itemSnapshot.altierId()),
+                            safe(itemSnapshot.articleId()),
+                            safe(itemSnapshot.materialType()),
+                            safe(itemSnapshot.nbPlis()),
+                            safe(itemSnapshot.thicknessMm()),
+                            safe(itemSnapshot.longueurM()),
+                            safe(itemSnapshot.largeurMm()),
+                            safe(itemSnapshot.quantite()),
+                            safe(itemSnapshot.colorId()),
+                            safe(normalize(itemSnapshot.reference())),
+                            safe(itemSnapshot.itemUpdatedAt()),
+                            safe(itemSnapshot.commandeUpdatedAt())
+                    )),
+                    digest(List.of("ROLLS=0|null|0", "WASTES=0|null|0"))
             );
         }
 
         OptimizationCandidateFingerprint wasteFingerprint = wastePieceRepository.findOptimizationFingerprint(
-            filter.articleId(),
-            filter.colorId(),
-            filter.altierId()
+                filter.articleId(),
+                filter.colorId(),
+                filter.altierId()
         );
 
         OptimizationCandidateFingerprint rollFingerprint = rollRepository.findOptimizationFingerprint(
-            filter.articleId(),
-            filter.colorId(),
-            filter.altierId()
+                filter.articleId(),
+                filter.colorId(),
+                filter.altierId()
         );
 
         List<OptimizationSourceSnapshot> sources = new ArrayList<>();
@@ -93,57 +93,57 @@ public class OptimizationSnapshotLoader {
         sources.sort(buildSourcePriorityComparator(itemSnapshot));
 
         List<UUID> rollIds = sources.stream()
-            .map(OptimizationSourceSnapshot::rollId)
-            .filter(java.util.Objects::nonNull)
-            .toList();
+                .map(OptimizationSourceSnapshot::rollId)
+                .filter(java.util.Objects::nonNull)
+                .toList();
         List<UUID> wasteIds = sources.stream()
-            .map(OptimizationSourceSnapshot::wastePieceId)
-            .filter(java.util.Objects::nonNull)
-            .toList();
+                .map(OptimizationSourceSnapshot::wastePieceId)
+                .filter(java.util.Objects::nonNull)
+                .toList();
 
         List<OptimizationOccupiedRectSnapshot> occupied = new ArrayList<>();
         if (!rollIds.isEmpty() || !wasteIds.isEmpty()) {
             List<UUID> safeRollIds = rollIds.isEmpty() ? List.of(new UUID(0L, 0L)) : rollIds;
             List<UUID> safeWasteIds = wasteIds.isEmpty() ? List.of(new UUID(0L, 0L)) : wasteIds;
             occupied.addAll(placedRectangleRepository.findOccupiedSnapshotsBySourceIds(
-                !rollIds.isEmpty(),
-                safeRollIds,
-                !wasteIds.isEmpty(),
-                safeWasteIds
+                    !rollIds.isEmpty(),
+                    safeRollIds,
+                    !wasteIds.isEmpty(),
+                    safeWasteIds
             ));
             occupied.addAll(optimizationPlacementRepository.findActiveOccupiedSnapshotsBySourceIdsExcludingItem(
-                !rollIds.isEmpty(),
-                safeRollIds,
-                !wasteIds.isEmpty(),
-                safeWasteIds,
-                itemSnapshot.itemId(),
-                ACTIVE_COMMANDE_STATUSES
+                    !rollIds.isEmpty(),
+                    safeRollIds,
+                    !wasteIds.isEmpty(),
+                    safeWasteIds,
+                    itemSnapshot.itemId(),
+                    ACTIVE_COMMANDE_STATUSES
             ));
         }
 
         Map<UUID, List<OptimizationOccupiedRectSnapshot>> occupiedBySource = occupied.stream()
-            .filter(snapshot -> snapshot.sourceId() != null)
-            .collect(Collectors.groupingBy(
-                OptimizationOccupiedRectSnapshot::sourceId,
-                LinkedHashMap::new,
-                Collectors.toList()
-            ));
+                .filter(snapshot -> snapshot.sourceId() != null)
+                .collect(Collectors.groupingBy(
+                        OptimizationOccupiedRectSnapshot::sourceId,
+                        LinkedHashMap::new,
+                        Collectors.toList()
+                ));
 
         String inputSignature = digest(java.util.Arrays.asList(
-            safe(itemSnapshot.itemId()),
-            safe(itemSnapshot.commandeId()),
-            safe(itemSnapshot.altierId()),
-            safe(itemSnapshot.articleId()),
-            safe(itemSnapshot.materialType()),
-            safe(itemSnapshot.nbPlis()),
-            safe(itemSnapshot.thicknessMm()),
-            safe(itemSnapshot.longueurM()),
-            safe(itemSnapshot.largeurMm()),
-            safe(itemSnapshot.quantite()),
-            safe(itemSnapshot.colorId()),
-            safe(normalize(itemSnapshot.reference())),
-            safe(itemSnapshot.itemUpdatedAt()),
-            safe(itemSnapshot.commandeUpdatedAt())
+                safe(itemSnapshot.itemId()),
+                safe(itemSnapshot.commandeId()),
+                safe(itemSnapshot.altierId()),
+                safe(itemSnapshot.articleId()),
+                safe(itemSnapshot.materialType()),
+                safe(itemSnapshot.nbPlis()),
+                safe(itemSnapshot.thicknessMm()),
+                safe(itemSnapshot.longueurM()),
+                safe(itemSnapshot.largeurMm()),
+                safe(itemSnapshot.quantite()),
+                safe(itemSnapshot.colorId()),
+                safe(normalize(itemSnapshot.reference())),
+                safe(itemSnapshot.itemUpdatedAt()),
+                safe(itemSnapshot.commandeUpdatedAt())
         ));
 
         List<String> stockParts = new ArrayList<>();
@@ -151,40 +151,40 @@ public class OptimizationSnapshotLoader {
         stockParts.add("WASTES=" + wasteFingerprint.cacheToken());
 
         sources.stream()
-            .sorted(Comparator.comparing(source -> source.sourceId().toString()))
-            .forEach(source -> stockParts.add(
-                safe(source.sourceType()) + "|"
-                    + safe(source.sourceId()) + "|"
-                    + safe(source.articleId()) + "|"
-                    + safe(source.widthMm()) + "|"
-                    + safe(source.lengthM()) + "|"
-                    + safe(source.availableAreaM2()) + "|"
-                    + safe(source.fullAreaM2()) + "|"
-                    + safe(source.sourceStatus()) + "|"
-                    + safe(source.updatedAt())
-            ));
+                .sorted(Comparator.comparing(source -> source.sourceId().toString()))
+                .forEach(source -> stockParts.add(
+                        safe(source.sourceType()) + "|"
+                                + safe(source.sourceId()) + "|"
+                                + safe(source.articleId()) + "|"
+                                + safe(source.widthMm()) + "|"
+                                + safe(source.lengthM()) + "|"
+                                + safe(source.availableAreaM2()) + "|"
+                                + safe(source.fullAreaM2()) + "|"
+                                + safe(source.sourceStatus()) + "|"
+                                + safe(source.updatedAt())
+                ));
 
         occupied.stream()
-            .filter(snapshot -> snapshot.sourceId() != null)
-            .sorted(Comparator
-                .comparing((OptimizationOccupiedRectSnapshot snapshot) -> snapshot.sourceId().toString())
-                .thenComparing(snapshot -> snapshot.xMm() != null ? snapshot.xMm() : 0)
-                .thenComparing(snapshot -> snapshot.yMm() != null ? snapshot.yMm() : 0))
-            .forEach(snapshot -> stockParts.add(
-                safe(snapshot.sourceId()) + "|"
-                    + safe(snapshot.xMm()) + "|"
-                    + safe(snapshot.yMm()) + "|"
-                    + safe(snapshot.widthMm()) + "|"
-                    + safe(snapshot.heightMm()) + "|"
-                    + safe(snapshot.updatedAt())
-            ));
+                .filter(snapshot -> snapshot.sourceId() != null)
+                .sorted(Comparator
+                        .comparing((OptimizationOccupiedRectSnapshot snapshot) -> snapshot.sourceId().toString())
+                        .thenComparing(snapshot -> snapshot.xMm() != null ? snapshot.xMm() : 0)
+                        .thenComparing(snapshot -> snapshot.yMm() != null ? snapshot.yMm() : 0))
+                .forEach(snapshot -> stockParts.add(
+                        safe(snapshot.sourceId()) + "|"
+                                + safe(snapshot.xMm()) + "|"
+                                + safe(snapshot.yMm()) + "|"
+                                + safe(snapshot.widthMm()) + "|"
+                                + safe(snapshot.heightMm()) + "|"
+                                + safe(snapshot.updatedAt())
+                ));
 
         return new OptimizationPlanningContext(
-            itemSnapshot,
-            sources,
-            occupiedBySource,
-            inputSignature,
-            digest(stockParts)
+                itemSnapshot,
+                sources,
+                occupiedBySource,
+                inputSignature,
+                digest(stockParts)
         );
     }
 
@@ -202,12 +202,12 @@ public class OptimizationSnapshotLoader {
 
     private Comparator<OptimizationSourceSnapshot> buildSourcePriorityComparator(OptimizationItemSnapshot itemSnapshot) {
         return Comparator
-            .comparingInt((OptimizationSourceSnapshot source) -> sourcePriority(source, itemSnapshot))
-            .thenComparing((OptimizationSourceSnapshot source) -> fittingWasteArea(source, itemSnapshot))
-            .thenComparing((OptimizationSourceSnapshot source) -> source.effectiveAreaM2(), Comparator.nullsLast(BigDecimal::compareTo))
-            .thenComparing(source -> source.receivedDate(), Comparator.nullsLast(Comparator.naturalOrder()))
-            .thenComparing(source -> source.updatedAt(), Comparator.nullsLast(Comparator.naturalOrder()))
-            .thenComparing(source -> source.sourceId() != null ? source.sourceId().toString() : "");
+                .comparingInt((OptimizationSourceSnapshot source) -> sourcePriority(source, itemSnapshot))
+                .thenComparing((OptimizationSourceSnapshot source) -> fittingWasteArea(source, itemSnapshot))
+                .thenComparing((OptimizationSourceSnapshot source) -> source.effectiveAreaM2(), Comparator.nullsLast(BigDecimal::compareTo))
+                .thenComparing(source -> source.receivedDate(), Comparator.nullsLast(Comparator.naturalOrder()))
+                .thenComparing(source -> source.updatedAt(), Comparator.nullsLast(Comparator.naturalOrder()))
+                .thenComparing(source -> source.sourceId() != null ? source.sourceId().toString() : "");
     }
 
     private int sourcePriority(OptimizationSourceSnapshot source, OptimizationItemSnapshot itemSnapshot) {
@@ -242,13 +242,13 @@ public class OptimizationSnapshotLoader {
             return null;
         }
         return BigDecimal.valueOf(itemSnapshot.largeurMm())
-            .multiply(itemSnapshot.longueurM().multiply(BigDecimal.valueOf(1000)))
-            .divide(BigDecimal.valueOf(1_000_000), 4, java.math.RoundingMode.HALF_UP);
+                .multiply(itemSnapshot.longueurM().multiply(BigDecimal.valueOf(1000)))
+                .divide(BigDecimal.valueOf(1_000_000), 4, java.math.RoundingMode.HALF_UP);
     }
 
     private boolean canFit(OptimizationSourceSnapshot source, OptimizationItemSnapshot itemSnapshot) {
         if (source.widthMm() == null || source.lengthM() == null
-            || itemSnapshot.largeurMm() == null || itemSnapshot.longueurM() == null) {
+                || itemSnapshot.largeurMm() == null || itemSnapshot.longueurM() == null) {
             return false;
         }
 
@@ -256,11 +256,11 @@ public class OptimizationSnapshotLoader {
         int sourceLength = source.lengthMm();
         int pieceWidth = itemSnapshot.largeurMm();
         int pieceLength = itemSnapshot.longueurM().multiply(BigDecimal.valueOf(1000))
-            .setScale(0, java.math.RoundingMode.HALF_UP)
-            .intValue();
+                .setScale(0, java.math.RoundingMode.HALF_UP)
+                .intValue();
 
         return (pieceWidth <= sourceWidth && pieceLength <= sourceLength)
-            || (pieceLength <= sourceWidth && pieceWidth <= sourceLength);
+                || (pieceLength <= sourceWidth && pieceWidth <= sourceLength);
     }
 
     private String digest(List<String> parts) {
